v1/deployments/kong-ingress-rule.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2023-10-17T14:49:55Z"
    generation: 1
    labels:
      kustomize.toolkit.fluxcd.io/name: flux-system
      kustomize.toolkit.fluxcd.io/namespace: flux-system
    name: echo
    namespace: kong
    resourceVersion: "38240"
    uid: 6e95c1ce-8c15-43e9-9cad-df9dd9672476
  spec:
    ingressClassName: kong
    rules:
    - http:
        paths:
        - backend:
            service:
              name: echoserver
              port:
                number: 80
          path: /echo
          pathType: Exact
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
